# dinobase

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  Makefile  README.md  benchmark.md  pyproject.toml
.flox/: env.json
.flox/env/: manifest.toml
.github/workflows/: check-setup-ui-bump.yml  ci.yml  release-setup-ui.yml  release.yml
assets/connector-logos/: colors.json
benchmarks/: METHODOLOGY.md  README.md  generate_report.py  questions.json  run_benchmark.py
benchmarks/results/: REPORT.md  claude-haiku-4.5.json  claude-haiku-4.5.md  claude-opus-4.6.json  claude-opus-4.6.md  claude-sonnet-4.6.json  claude-sonnet-4.6.md  deepseek-v3.2.json  deepseek-v3.2.md  gemini-3-flash.json  gemini-3-flash.md  gemini-3.1-pro.json  gemini-3.1-pro.md  glm-5-turbo.json  glm-5-turbo.md  gpt-5.4.json  gpt-5.4.md  kimi-k2.5.json  kimi-k2.5.md  minimax-m2.7.json  minimax-m2.7.md  qwen-3.5-27b.json  qwen-3.5-27b.md
dinobase/: __init__.py  __main__.py  annotations.py  auth.py  cli.py  cloud.py  cloud_client.py  config.py  db.py  semantic_agent.py  telemetry.py  updater.py
dinobase/connectors/: __init__.py  templates.py
dinobase/fetch/: __init__.py  connector.py  mcp_connector.py
dinobase/mcp/: __init__.py  server.py
dinobase/query/: engine.py  mutations.py
dinobase/setup_server/: __init__.py  mcp_catalog.py  routes.py  server.py  ui_bundle.py  ui_manifest.py
dinobase/sync/: engine.py  metadata.py  registry.py  scheduler.py  source_config.py  source_fetch.py  yaml_source.py
docs/: README.md  astro.config.mjs  getting-started.md
docs/connectors/: cloud-storage.md  custom-rest.md  customizing.md  databases.md  files.md  mcp.md  overview.md  saas.md
docs/guides/: annotations.md  cloud-storage-backend.md  connecting-sources.md  exec-code.md  mutations.md  querying.md  syncing.md
docs/integrations/: claude-code.md  claude-desktop.md  codex.md  crewai.md  cursor.md  langchain.md  llamaindex.md  mastra.md  mcp.md  openclaw.md  pydantic-ai.md  vercel-ai.md
docs/project/: architecture.md  benchmarks.md  development.md
docs/reference/: cli.md  configuration.md  environment-variables.md  mcp-tools.md  python-api.md
ee/: LICENSE  README.md
ee/cloud/: .env.example  dev.sh  mprocs.yaml
ee/cloud/api/: .env.example  Dockerfile  fly.toml  pyproject.toml
ee/cloud/api/migrations/: 0001_initial.sql
ee/cloud/api/src/dinobase_hosted/: app.py  cli.py  config.py  db.py  encryption.py  models.py
ee/cloud/api/src/dinobase_hosted/oauth/: providers.py  router.py
ee/cloud/api/src/dinobase_hosted/routers/: __init__.py  mcp.py  query.py  sandbox.py  sources.py  sync.py
ee/cloud/api/src/dinobase_hosted/workers/: sync_worker.py
ee/cloud/api/tests/: test_oauth.py
ee/hosted/: Dockerfile  fly.toml  pyproject.toml
ee/hosted/src/dinobase_hosted/: auth.py  config.py  db.py  storage.py
ee/hosted/src/dinobase_hosted/oauth/: config.py
ee/hosted/src/dinobase_hosted/routers/: accounts.py  query.py  sources.py
ee/hosted/tests/: test_oauth.py
ee/oauth-proxy/: .dockerignore  Dockerfile  fly.toml  pyproject.toml
ee/oauth-proxy/src/dinobase_oauth_proxy/: app.py  cli.py  config.py
ee/oauth-proxy/tests/: test_app.py
ee/web/: tailwind.config.js
ee/website/: .env.example  .gitignore  README.md  astro.config.mjs  package.json
integrations/crewai/: README.md  tools.py
integrations/langchain/: README.md  toolkit.py
integrations/llamaindex/: README.md  tool_spec.py
integrations/mastra/: README.md
integrations/openclaw/: README.md  SKILL.md
integrations/pydantic-ai/: README.md  tools.py
integrations/vercel-ai/: README.md
sample_data/: analytics_events.parquet  datadog_monitors.parquet  github_deployments.parquet  github_issues.parquet  github_pull_requests.parquet  github_repos.parquet  hubspot_companies.parquet  hubspot_contacts.parquet  hubspot_deals.parquet  notion_databases.parquet  notion_pages.parquet  pagerduty_incidents.parquet  pagerduty_services.parquet  shopify_customers.parquet  shopify_orders.parquet  shopify_products.parquet  slack_channels.parquet  slack_messages.parquet  stripe_charges.parquet  stripe_customers.parquet  stripe_ecom_charges.parquet  stripe_ecom_customers.parquet  stripe_invoices.parquet  stripe_openapi_mini.json  stripe_subscriptions.parquet  stripe_support_customers.parquet  stripe_support_subscriptions.parquet  zendesk_agents.parquet  zendesk_tickets.parquet
scripts/: generate_sample_data.py  publish_setup_ui.py  release.sh
tests/: conftest.py  test_auth.py  test_cli.py  test_cloud_ops.py  test_cloud_storage.py  test_connector_overrides.py  test_db.py  test_freshness.py  test_graphql_source.py  test_live_fetch.py  test_mcp.py  test_mutations.py  test_parquet_source.py  test_query_engine.py  test_query_timeout.py  test_scheduler.py  test_semantic_agent.py  test_source_fetch.py  test_sync_timeout.py  test_updater.py  test_write_client.py  test_yaml_source.py
(+574 files in other folders)
