[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dinobase"
version = "0.2.6"
description = "🦕 The agent-first database"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "duckdb>=1.0",
    "dlt[duckdb,sql_database,filesystem]>=1.0",
    "mcp>=1.0",
    "click>=8.0",
    "pyyaml>=6.0",
    "posthog>=3.0",
    "python-toon>=0.1",
]

[project.optional-dependencies]
pydantic-ai = [
    "pydantic-ai>=0.0.20",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pyarrow>=14.0",
    "faker>=24.0",
]

[project.scripts]
dinobase = "dinobase.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["dinobase"]
# The setup GUI's bundled UI assets (HTML/JS) live under dinobase/setup_server/ui/
# and are shipped as package data automatically because they're inside the
# `dinobase` package tree.
artifacts = ["dinobase/setup_server/ui/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
