[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dinobase-oauth-proxy"
version = "0.1.0"
description = "OAuth proxy for Dinobase — handles OAuth flows on behalf of the CLI"
requires-python = ">=3.10"
license = "Elastic-2.0"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
dinobase-oauth-proxy = "dinobase_oauth_proxy.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dinobase_oauth_proxy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
