[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dinobase-server"
version = "0.1.0"
description = "Dinobase Cloud — hosted service with OAuth, sync, and query API"
requires-python = ">=3.10"
license = "Elastic-2.0"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "python-jose[cryptography]>=3.3",
    "cryptography>=42.0",
    "supabase>=2.0",
    "python-dotenv>=1.0",
    "anthropic>=0.40",
    "dinobase",
    "dlt[sql_database,filesystem,parquet]>=0.5",
    "psycopg2-binary>=2.9",
    # All source drivers — available out of the box
    # API sources
    "simple-salesforce>=1.12",
    "pyairtable>=2.3",
    "google-api-python-client>=2.100",
    "facebook-business>=20.0",
    "google-analytics-data>=0.18",
    "google-ads>=25.0",
    "asana>=5.0",
    "pymongo>=4.0",
    "confluent-kafka>=2.3",
    # Database drivers
    "clickhouse-sqlalchemy>=0.3",
    "snowflake-sqlalchemy>=1.5",
    "sqlalchemy-bigquery>=1.9",
    "databricks-sql-connector>=3.0",
    "trino>=0.321",
    "pyhive>=0.7",
    "pyodbc>=4.0",
    "pymysql>=1.1",
    "oracledb>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
dinobase-server = "dinobase_hosted.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dinobase_hosted"]

[tool.uv.sources]
dinobase = { path = "../../../", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
